--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>cl.tense</groupId>
+            <groupId>org.tensa</groupId>
             <artifactId>stlobjects</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
